--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "body-parser": "~1.0.0",
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
-    "elo-rank": "^1.0.3",
-    "express": "~4.0.0",
     "morgan": "~1.0.0",
-    "pako": "^1.0.6",
-    "static-favicon": "~1.0.0"
+    "express": "~4.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.12.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0"
   }
 }
